tests/ui/parser/recover/recover-pat-exprs.stderr
error: expected one of `=>`, `@`, `if`, or `|`, found `.`
  --> $DIR/recover-pat-exprs.rs:10:10
   |
LL |         x.0e0 => (),
   |          ^ expected one of `=>`, `@`, `if`, or `|`

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:5:9
   |
LL |         x.y => (),
   |         ^^^ arbitrary expressions are not allowed in patterns
   |
help: check the value in an arm guard
   |
LL |         val if val == x.y => (),
   |         ~~~ +++++++++++++
help: extract the expression into a `const` and refer to it
   |
LL +     const VAL: _ = x.y;
LL ~     match 0 {
LL |         x => (),
LL ~         VAL => (),
   |
help: wrap the expression in a inline const (requires `#![feature(inline_const_pat)]`)
   |
LL |         const { x.y } => (),
   |         +++++++     +

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:6:9
   |
LL |         x.0 => (),
   |         ^^^ arbitrary expressions are not allowed in patterns
   |
help: check the value in an arm guard
   |
LL |         val if val == x.0 => (),
   |         ~~~ +++++++++++++
help: extract the expression into a `const` and refer to it
   |
LL +     const VAL: _ = x.0;
LL ~     match 0 {
LL |         x => (),
LL |         x.y => (),
LL ~         VAL => (),
   |
help: wrap the expression in a inline const (requires `#![feature(inline_const_pat)]`)
   |
LL |         const { x.0 } => (),
   |         +++++++     +

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:7:9
   |
LL |         x._0 => (),
   |         ^^^^ arbitrary expressions are not allowed in patterns
   |
help: check the value in an arm guard
   |
LL |         val if val == x._0 => (),
   |         ~~~ ++++++++++++++
help: extract the expression into a `const` and refer to it
   |
LL +     const VAL: _ = x._0;
LL ~     match 0 {
LL |         x => (),
LL |         x.y => (),
LL |         x.0 => (),
LL ~         VAL => (),
   |
help: wrap the expression in a inline const (requires `#![feature(inline_const_pat)]`)
   |
LL |         const { x._0 } => (),
   |         +++++++      +

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:8:9
   |
LL |         x.0.1 => (),
   |         ^^^^^ arbitrary expressions are not allowed in patterns
   |
help: check the value in an arm guard
   |
LL |         val if val == x.0.1 => (),
   |         ~~~ +++++++++++++++
help: extract the expression into a `const` and refer to it
   |
LL +     const VAL: _ = x.0.1;
LL ~     match 0 {
LL |         x => (),
...
LL |         x._0 => (),
LL ~         VAL => (),
   |
help: wrap the expression in a inline const (requires `#![feature(inline_const_pat)]`)
   |
LL |         const { x.0.1 } => (),
   |         +++++++       +

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:9:9
   |
LL |         x.4.y.17.__z => (),
   |         ^^^^^^^^^^^^ arbitrary expressions are not allowed in patterns
   |
help: check the value in an arm guard
   |
LL |         val if val == x.4.y.17.__z => (),
   |         ~~~ ++++++++++++++++++++++
help: extract the expression into a `const` and refer to it
   |
LL +     const VAL: _ = x.4.y.17.__z;
LL ~     match 0 {
LL |         x => (),
...
LL |         x.0.1 => (),
LL ~         VAL => (),
   |
help: wrap the expression in a inline const (requires `#![feature(inline_const_pat)]`)
   |
LL |         const { x.4.y.17.__z } => (),
   |         +++++++              +

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:17:9
   |
LL |         x.f() => (),
   |         ^^^^^ arbitrary expressions are not allowed in patterns
   |
help: check the value in an arm guard
   |
LL |         val if val == x.f() => (),
   |         ~~~ +++++++++++++++
help: extract the expression into a `const` and refer to it
   |
LL +     const VAL: _ = x.f();
LL ~     match 0 {
LL ~         VAL => (),
   |
help: wrap the expression in a inline const (requires `#![feature(inline_const_pat)]`)
   |
LL |         const { x.f() } => (),
   |         +++++++       +

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:18:9
   |
LL |         x._f() => (),
   |         ^^^^^^ arbitrary expressions are not allowed in patterns
   |
help: check the value in an arm guard
   |
LL |         val if val == x._f() => (),
   |         ~~~ ++++++++++++++++
help: extract the expression into a `const` and refer to it
   |
LL +     const VAL: _ = x._f();
LL ~     match 0 {
LL |         x.f() => (),
LL ~         VAL => (),
   |
help: wrap the expression in a inline const (requires `#![feature(inline_const_pat)]`)
   |
LL |         const { x._f() } => (),
   |         +++++++        +

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:19:9
   |
LL |         x? => (),
   |         ^^ arbitrary expressions are not allowed in patterns
   |
help: check the value in an arm guard
   |
LL |         val if val == x? => (),
   |         ~~~ ++++++++++++
help: extract the expression into a `const` and refer to it
   |
LL +     const VAL: _ = x?;
LL ~     match 0 {
LL |         x.f() => (),
LL |         x._f() => (),
LL ~         VAL => (),
   |
help: wrap the expression in a inline const (requires `#![feature(inline_const_pat)]`)
   |
LL |         const { x? } => (),
   |         +++++++    +

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:20:9
   |
LL |         ().f() => (),
   |         ^^^^^^ arbitrary expressions are not allowed in patterns
   |
help: check the value in an arm guard
   |
LL |         val if val == ().f() => (),
   |         ~~~ ++++++++++++++++
help: extract the expression into a `const` and refer to it
   |
LL +     const VAL: _ = ().f();
LL ~     match 0 {
LL |         x.f() => (),
LL |         x._f() => (),
LL |         x? => (),
LL ~         VAL => (),
   |
help: wrap the expression in a inline const (requires `#![feature(inline_const_pat)]`)
   |
LL |         const { ().f() } => (),
   |         +++++++        +

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:21:9
   |
LL |         (0, x)?.f() => (),
   |         ^^^^^^^^^^^ arbitrary expressions are not allowed in patterns
   |
help: check the value in an arm guard
   |
LL |         val if val == (0, x)?.f() => (),
   |         ~~~ +++++++++++++++++++++
help: extract the expression into a `const` and refer to it
   |
LL +     const VAL: _ = (0, x)?.f();
LL ~     match 0 {
LL |         x.f() => (),
...
LL |         ().f() => (),
LL ~         VAL => (),
   |
help: wrap the expression in a inline const (requires `#![feature(inline_const_pat)]`)
   |
LL |         const { (0, x)?.f() } => (),
   |         +++++++             +

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:22:9
   |
LL |         x.f().g() => (),
   |         ^^^^^^^^^ arbitrary expressions are not allowed in patterns
   |
help: check the value in an arm guard
   |
LL |         val if val == x.f().g() => (),
   |         ~~~ +++++++++++++++++++
help: extract the expression into a `const` and refer to it
   |
LL +     const VAL: _ = x.f().g();
LL ~     match 0 {
LL |         x.f() => (),
...
LL |         (0, x)?.f() => (),
LL ~         VAL => (),
   |
help: wrap the expression in a inline const (requires `#![feature(inline_const_pat)]`)
   |
LL |         const { x.f().g() } => (),
   |         +++++++           +

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:23:9
   |
LL |         0.f()?.g()?? => (),
   |         ^^^^^^^^^^^^ arbitrary expressions are not allowed in patterns
   |
help: check the value in an arm guard
   |
LL |         val if val == 0.f()?.g()?? => (),
   |         ~~~ ++++++++++++++++++++++
help: extract the expression into a `const` and refer to it
   |
LL +     const VAL: _ = 0.f()?.g()??;
LL ~     match 0 {
LL |         x.f() => (),
...
LL |         x.f().g() => (),
LL ~         VAL => (),
   |
help: wrap the expression in a inline const (requires `#![feature(inline_const_pat)]`)
   |
LL |         const { 0.f()?.g()?? } => (),
   |         +++++++              +

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:30:9
   |
LL |         x as usize => (),
   |         ^^^^^^^^^^ arbitrary expressions are not allowed in patterns
   |
help: check the value in an arm guard
   |
LL |         val if val == x as usize => (),
   |         ~~~ ++++++++++++++++++++
help: extract the expression into a `const` and refer to it
   |
LL +     const VAL: _ = x as usize;
LL ~     match 0 {
LL ~         VAL => (),
   |
help: wrap the expression in a inline const (requires `#![feature(inline_const_pat)]`)
   |
LL |         const { x as usize } => (),
   |         +++++++            +

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:31:9
   |
LL |         0 as usize => (),
   |         ^^^^^^^^^^ arbitrary expressions are not allowed in patterns
   |
help: check the value in an arm guard
   |
LL |         val if val == 0 as usize => (),
   |         ~~~ ++++++++++++++++++++
help: extract the expression into a `const` and refer to it
   |
LL +     const VAL: _ = 0 as usize;
LL ~     match 0 {
LL |         x as usize => (),
LL ~         VAL => (),
   |
help: wrap the expression in a inline const (requires `#![feature(inline_const_pat)]`)
   |
LL |         const { 0 as usize } => (),
   |         +++++++            +

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:32:9
   |
LL |         x.f().0.4 as f32 => (),
   |         ^^^^^^^^^^^^^^^^ arbitrary expressions are not allowed in patterns
   |
help: check the value in an arm guard
   |
LL |         val if val == x.f().0.4 as f32 => (),
   |         ~~~ ++++++++++++++++++++++++++
help: extract the expression into a `const` and refer to it
   |
LL +     const VAL: _ = x.f().0.4 as f32;
LL ~     match 0 {
LL |         x as usize => (),
LL |         0 as usize => (),
LL ~         VAL => (),
   |
help: wrap the expression in a inline const (requires `#![feature(inline_const_pat)]`)
   |
LL |         const { x.f().0.4 as f32 } => (),
   |         +++++++                  +

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:39:9
   |
LL |         1 + 1 => (),
   |         ^^^^^ arbitrary expressions are not allowed in patterns
   |
help: check the value in an arm guard
   |
LL |         val if val == 1 + 1 => (),
   |         ~~~ +++++++++++++++
help: extract the expression into a `const` and refer to it
   |
LL +     const VAL: _ = 1 + 1;
LL ~     match 0 {
LL ~         VAL => (),
   |
help: wrap the expression in a inline const (requires `#![feature(inline_const_pat)]`)
   |
LL |         const { 1 + 1 } => (),
   |         +++++++       +

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:40:9
   |
LL |         (1 + 2) * 3 => (),
   |         ^^^^^^^^^^^ arbitrary expressions are not allowed in patterns
   |
help: check the value in an arm guard
   |
LL |         val if val == (1 + 2) * 3 => (),
   |         ~~~ +++++++++++++++++++++
help: extract the expression into a `const` and refer to it
   |
LL +     const VAL: _ = (1 + 2) * 3;
LL ~     match 0 {
LL |         1 + 1 => (),
LL ~         VAL => (),
   |
help: wrap the expression in a inline const (requires `#![feature(inline_const_pat)]`)
   |
LL |         const { (1 + 2) * 3 } => (),
   |         +++++++             +

error: left-hand side of `@` must be a binding
  --> $DIR/recover-pat-exprs.rs:53:9
   |
LL |         x.sqrt() @ .. => (),
   |         --------^^^--
   |         |          |
   |         |          also a pattern
   |         interpreted as a pattern, not a binding
   |
   = note: bindings are `x`, `mut x`, `ref x`, and `ref mut x`

error: expected one of `)`, `,`, or `|`, found `+`
  --> $DIR/recover-pat-exprs.rs:67:12
   |
LL |         (_ + 1) => (),
   |            ^ expected one of `)`, `,`, or `|`

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:51:9
   |
LL |         u8::MAX.abs() => (),
   |         ^^^^^^^^^^^^^ arbitrary expressions are not allowed in patterns
   |
help: check the value in an arm guard
   |
LL |         val if val == u8::MAX.abs() => (),
   |         ~~~ +++++++++++++++++++++++
help: extract the expression into a `const` and refer to it
   |
LL +     const VAL: _ = u8::MAX.abs();
LL ~     match u8::MAX {
LL ~         VAL => (),
   |
help: wrap the expression in a inline const (requires `#![feature(inline_const_pat)]`)
   |
LL |         const { u8::MAX.abs() } => (),
   |         +++++++               +

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:56:17
   |
LL |         z @ w @ v.u() => (),
   |                 ^^^^^ arbitrary expressions are not allowed in patterns
   |
help: check the value in an arm guard
   |
LL |         z @ w @ val if val == v.u() => (),
   |                 ~~~ +++++++++++++++
help: extract the expression into a `const` and refer to it
   |
LL +     const VAL: _ = v.u();
LL ~     match u8::MAX {
LL |         u8::MAX.abs() => (),
...
LL |
LL ~         z @ w @ VAL => (),
   |
help: wrap the expression in a inline const (requires `#![feature(inline_const_pat)]`)
   |
LL |         z @ w @ const { v.u() } => (),
   |                 +++++++       +

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:58:9
   |
LL |         y.ilog(3) => (),
   |         ^^^^^^^^^ arbitrary expressions are not allowed in patterns
   |
help: check the value in an arm guard
   |
LL |         val if val == y.ilog(3) => (),
   |         ~~~ +++++++++++++++++++
help: extract the expression into a `const` and refer to it
   |
LL +     const VAL: _ = y.ilog(3);
LL ~     match u8::MAX {
LL |         u8::MAX.abs() => (),
...
LL |
LL ~         VAL => (),
   |
help: wrap the expression in a inline const (requires `#![feature(inline_const_pat)]`)
   |
LL |         const { y.ilog(3) } => (),
   |         +++++++           +

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:60:9
   |
LL |         n + 1 => (),
   |         ^^^^^ arbitrary expressions are not allowed in patterns
   |
help: check the value in an arm guard
   |
LL |         val if val == n + 1 => (),
   |         ~~~ +++++++++++++++
help: extract the expression into a `const` and refer to it
   |
LL +     const VAL: _ = n + 1;
LL ~     match u8::MAX {
LL |         u8::MAX.abs() => (),
...
LL |
LL ~         VAL => (),
   |
help: wrap the expression in a inline const (requires `#![feature(inline_const_pat)]`)
   |
LL |         const { n + 1 } => (),
   |         +++++++       +

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:62:10
   |
LL |         ("".f() + 14 * 8) => (),
   |          ^^^^^^^^^^^^^^^ arbitrary expressions are not allowed in patterns
   |
help: check the value in an arm guard
   |
LL |         (val) if val == "".f() + 14 * 8 => (),
   |          ~~~  +++++++++++++++++++++++++
help: extract the expression into a `const` and refer to it
   |
LL +     const VAL: _ = "".f() + 14 * 8;
LL ~     match u8::MAX {
LL |         u8::MAX.abs() => (),
...
LL |
LL ~         (VAL) => (),
   |
help: wrap the expression in a inline const (requires `#![feature(inline_const_pat)]`)
   |
LL |         (const { "".f() + 14 * 8 }) => (),
   |          +++++++                 +

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:65:9
   |
LL |         f?() => (),
   |         ^^^^ arbitrary expressions are not allowed in patterns
   |
help: check the value in an arm guard
   |
LL |         val if val == f?() => (),
   |         ~~~ ++++++++++++++
help: extract the expression into a `const` and refer to it
   |
LL +     const VAL: _ = f?();
LL ~     match u8::MAX {
LL |         u8::MAX.abs() => (),
...
LL |         0 | ((1) | 2) | 3 => (),
LL ~         VAL => (),
   |
help: wrap the expression in a inline const (requires `#![feature(inline_const_pat)]`)
   |
LL |         const { f?() } => (),
   |         +++++++      +

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:71:9
   |
LL |     let 1 + 1 = 2;
   |     --- ^^^^^ arbitrary expressions are not allowed in patterns
   |     |
   |     help: remove this `let`

error: expected one of `)`, `,`, `@`, or `|`, found `*`
  --> $DIR/recover-pat-exprs.rs:74:28
   |
LL |     let b = matches!(x, (x * x | x.f()) | x[0]);
   |                            ^ expected one of `)`, `,`, `@`, or `|`
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: while parsing argument for this `pat` macro fragment

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:45:5
   |
LL |     1 + 2 * PI.cos() => 2,
   |     ^^^^^^^^^^^^^^^^ arbitrary expressions are not allowed in patterns

error: expected a pattern, found an expression
  --> $DIR/recover-pat-exprs.rs:53:9
   |
LL |         x.sqrt() @ .. => (),
   |         ^^^^^^^^ arbitrary expressions are not allowed in patterns

error: aborting due to 30 previous errors

